# git-stats

./: .mailmap  README.md  justfile  pyproject.toml  spec.md
.github/workflows/: ci.yml
src/git_stats/: __init__.py  cli.py  config.py  formatting.py  scoring.py
src/git_stats/commands/: __init__.py  dris.py  stats.py
src/git_stats/git/: __init__.py  parser.py  repository.py
tests/: __init__.py  conftest.py  test_formatting.py  test_integration.py  test_scoring.py
tests/fixtures/: git_log_sample.txt
tests/git/: __init__.py  test_parser.py  test_repository.py
