[project]
name = "git-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Franck Cuny", email = "59291+fcuny@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
git-stats = "git_stats:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
