[project]
name = "git-stats"
version = "0.1.0"
description = "A Python-based command-line tool that analyzes Git repositories to generate statistics about contributions and identify code experts"
readme = "README.md"
authors = [
    { name = "Franck Cuny", email = "59291+fcuny@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["rich>=13.0.0", "gitpython>=3.1.0"]

[project.scripts]
git-stats = "git_stats.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "isort>=5.0.0"]
